update gcp file
