# openapi-appengine.yaml
@@ -285,7 +285,7 @@ paths:
         201:
           description: "success get all detection"
           schema:
-            $ref: "#/definitions/DetectionSuccessResponse"
+            $ref: "#/definitions/DetectionAllSuccessResponse"
         400:
           description: "failed get all detection"
           schema:
@@ -358,7 +358,7 @@ paths:
         201:
           description: "success get detail detection"
           schema:
-            $ref: "#/definitions/DetectionSuccessResponse"
+            $ref: "#/definitions/DetectionDetailSuccessResponse"
         400:
           description: "failed get detail detection"
           schema:
@@ -689,15 +689,76 @@ definitions:
       updatedAt:
         type: "string"
         format: "date-time"
-  DetectionSuccessResponse:
+  DetectionDetailSuccessResponse:
     type: "object"
     properties:
-      error:
-        type: "boolean"
-      message:
+      lat:
+        type: "number"
+        format: "double"
+      lon:
+        type: "number"
+        format: "double"
+      recordUrl:
         type: "string"
-      detections:
-        $ref: "#/definitions/Detection"
+        format: "binary"
+      type:
+        type: "string"
+        enum:
+          - "kejahatan"
+          - "kecelakaan"
+          - "kebakaran"
+      status:
+        type: "string"
+        enum:
+          - "invalid"
+          - "valid"
+          - "selesai"
+          - "tolak"
+      city:
+        type: "string"
+      updatedAt:
+        type: "string"
+        format: "date-time"
+      name:
+        type: "string"
+      address:
+        type: "string"
+      number:
+        type: "string"
+      parentNumber:
+        type: "string"
+  DetectionAllSuccessResponse:
+    type: "object"
+    properties:
+      lat:
+        type: "number"
+        format: "double"
+      lon:
+        type: "number"
+        format: "double"
+      recordUrl:
+        type: "string"
+        format: "binary"
+      type:
+        type: "string"
+        enum:
+          - "kejahatan"
+          - "kecelakaan"
+          - "kebakaran"
+      status:
+        type: "string"
+        enum:
+          - "invalid"
+          - "valid"
+          - "selesai"
+          - "tolak"
+      city:
+        type: "string"
+      updatedAt:
+        type: "string"
+        format: "date-time"
+      name:
+        type: "string"
   AddDetectionBody:
     type: "object"
     properties:
